Sequential focus navigation across frames should clear per-document starting point.

BUG=650228

Review-Url: https://codereview.chromium.org/2377543002
Cr-Commit-Position: refs/heads/master@{#421121}

Former-commit-id: bd983452a314772dd8409979f3deda637336f0ca